# novel_rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.py  docker-compose.yml  index.html  main.py  pyproject.toml
.claude/: settings.local.json
src/: config.py  lifespan.py  main.py  rag.py  zhipu_utils.py
storage_index/: index_store.json
