[project]
name = "novel-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "llama-index>=0.14.12",
    "llama-index-embeddings-ollama>=0.8.6",
    "llama-index-llms-zhipuai>=0.4.1",
    "llama-index-retrievers-bm25>=0.6.5",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.40.0",
    "zai-sdk>=0.0.3.4",
    "zhipuai>=2.1.5.20250825",
]
